<resources>
    <string name="app_name">FoodStoreChallengeCh3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="text_header_name">Hai Binarian</string>
    <string name="text_header_greeting">Mau makan apa hari ini?</string>
    <string name="text_search">Searching</string>
    <string name="text_discount">Diskon 30%</string>
    <string name="text_complement_discount">Pesan makanan lewat aplikasi dan dapatkan diskonmu</string>
    <string name="text_title_list_menu">List Menu Makanan</string>
    <string name="text_location">Lokasi</string>
    <string name="text_total_price">Total Harga</string>
    <string name="text_title_your_cart">Keranjang</string>
    <string name="text_cart_is_empty">Cart is Empty</string>
    <string name="text_hint_notes">Notes</string>
    <string name="text_nav_profile">Profile</string>
    <string name="text_nav_cart">Cart</string>
    <string name="text_nav_home">Home</string>
    <string name="total_quantity">x%s</string>
    <string name="text_delivery_method">Metode Pengiriman</string>
    <string name="text_pick_up">Ambil Sendiri</string>
    <string name="text_delivery">Dikirim</string>
    <string name="text_title_payment_method">Metode Pembayaran</string>
    <string name="text_cash">Tunai</string>
    <string name="text_e_wallet">Digital</string>
    <string name="text_shopping_summary">Ringkasan Pembayaran</string>
    <string name="text_checkout">Pesan</string>
    <string name="text_already_have_an_account_click_here">Already have an Account ? Login Here</string>
    <string name="text_register">Register</string>
    <string name="hint_name">Your Name</string>
    <string name="hint_email">Email</string>
    <string name="text_highlight_login_here">Login Here</string>
    <string name="text_error_name_cannot_empty">Name cannot be empty</string>
    <string name="hint_password">Password</string>
    <string name="text_error_email_empty">Email should not be empty</string>
    <string name="text_error_email_invalid">Enter a valid format email</string>
    <string name="text_error_password_empty">Password should not be empty</string>
    <string name="text_error_password_less_than_8_char">Password cannot less than 8 character</string>
    <string name="text_password_does_not_match">Password doesn\'t match</string>
    <string name="text_highlight_register">Register Here</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_log_in">Log in</string>
    <string name="text_not_registered_yet_register_here">Not registered yet? Register Here</string>
    <string name="text_change_profile">Change Profile</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_logout">Logout</string>
    <string name="text_ok">OK</string>
    <string name="all">all</string>
    <string name="text_number">1</string>
    <string name="product_not_found">Product not found</string>
    <string name="text_header_confirmation_order">Konfirmasi Pesanan</string>
    <string name="desc_image_button">image button back</string>
    <string name="text_add_to_cart">Tambahkan ke keranjang</string>
    <string name="text_header_greeting_login">Welcome back!</string>
    <string name="text_desc_greeting">Login to your account</string>
    <string name="text_header_greeting_register">Register</string>
    <string name="text_desc_greeting_register">Let\'s get started. Are you ready \n to be a part of something new?</string>
    <string name="text_greeting_splash">Welcome!</string>
    <string name="text_order">Pesan</string>
    <string name="text_header_profile">Profile</string>
    <string name="text_number_count">1</string>
</resources>