<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_delivery_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/ll_action_bar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_delivery_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginVertical="12dp">

                <TextView
                    android:id="@+id/tv_delivery_method"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="14sp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/text_delivery_method"
                    android:textStyle="bold"/>

                <RadioGroup
                    android:id="@+id/rg_delivery_method"
                    android:checkedButton="@+id/rb_delivery"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_delivery_method"
                    android:layout_marginVertical="12dp"
                    android:background="@drawable/lightblue_out_line"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_pick_up"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginTop="1dp"
                        android:layout_marginBottom="1dp"
                        android:layout_marginLeft="1dp"
                        android:text="@string/text_pick_up"
                        android:background="@drawable/toggle_widget_background"
                        android:button="@null"
                        android:gravity="center" />

                    <RadioButton
                        android:id="@+id/rb_delivery"
                        android:layout_marginRight="1dp"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginTop="1dp"
                        android:layout_marginBottom="1dp"
                        android:text="@string/text_delivery"
                        android:background="@drawable/toggle_widget_background"
                        android:button="@null"
                        android:gravity="center" />
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="@color/white"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/cv_section_checkout"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="3"
            tools:listitem="@layout/item_cart_menu" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_payment_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/ll_action_bar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_payment_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/cl_list_menu"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginVertical="12dp"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_payment_method"
                    android:layout_width="0dp"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="14sp"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/text_title_payment_method"
                    android:textStyle="bold"/>
                <RadioGroup
                    android:checkedButton="@+id/offer_2"
                    android:id="@+id/toggle_2"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_payment_method"
                    android:layout_marginVertical="12dp"
                    android:background="@drawable/lightblue_out_line"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_marginTop="1dp"
                        android:layout_marginBottom="1dp"
                        android:layout_marginLeft="1dp"
                        android:text="@string/text_cash"
                        android:background="@drawable/toggle_widget_background"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:button="@null"
                        android:gravity="center"
                        android:id="@+id/offer_2"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:layout_marginRight="1dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginBottom="1dp"
                        android:text="@string/text_e_wallet"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/toggle_widget_background"
                        android:button="@null"
                        android:gravity="center"
                        android:textColor="@color/black" />
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_shopping_summary"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/ll_action_bar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title_shopping_summary"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/text_shopping_summary" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_shopping_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:background="@color/white"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toTopOf="@id/cv_section_checkout"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_cost" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>